# parking_lot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
doc/: test_time_slots.txt
src/: parking.py  space_slot.py
tests/: test_parking.py  test_space_slot.py
